# apertium-huv

./: Makefile  Makefile.am  README  apertium-huv.huv.lexc  apertium-huv.huv.mor.twol  apertium-huv.huv.rlx  apertium-huv.huv.spellrelax  apertium-huv.huv.twol  apertium-huv.huv.udx  apertium-huv.pc.in  configure.ac  modes.xml
corpora/: tesis.conllu  tesis.seg  tesis.tsv  tesis.vislcg  texto.huv.txt  texto.spa.txt  texto.tsv
dev/: countstems.sh
tests/: caus.tsv  irre.tsv  noun-niüng.tsv  oniw.tsv  perf.tsv  pres.tsv  prog.tsv  pron-poss.tsv  punct.tsv  subjunc.tsv  test.py  verb-mong.tsv  verb-uuch.tsv
